@@ -11,6 +11,7 @@ import xyz.erupt.annotation.EruptField;
 import xyz.erupt.annotation.SceneEnum;
 import xyz.erupt.annotation.config.QueryExpression;
 import xyz.erupt.annotation.constant.AnnotationConst;
+import xyz.erupt.annotation.exception.EruptException;
 import xyz.erupt.annotation.fun.AttachmentProxy;
 import xyz.erupt.annotation.fun.VLModel;
 import xyz.erupt.annotation.query.Condition;
@@ -18,6 +19,7 @@ import xyz.erupt.annotation.sub_field.Edit;
 import xyz.erupt.annotation.sub_field.EditType;
 import xyz.erupt.annotation.sub_field.EditTypeSearch;
 import xyz.erupt.annotation.sub_field.View;
+import xyz.erupt.annotation.sub_field.sub_edit.Dynamic;
 import xyz.erupt.annotation.sub_field.sub_edit.ReferenceTableType;
 import xyz.erupt.annotation.sub_field.sub_edit.ReferenceTreeType;
 import xyz.erupt.annotation.sub_field.sub_edit.TagsType;
@@ -26,19 +28,20 @@ import xyz.erupt.core.config.GsonFactory;
 import xyz.erupt.core.constant.EruptConst;
 import xyz.erupt.core.exception.EruptApiErrorTip;
 import xyz.erupt.core.i18n.I18nTranslate;
+import xyz.erupt.core.invoke.DataProxyInvoke;
 import xyz.erupt.core.proxy.AnnotationProcess;
 import xyz.erupt.core.service.EruptApplication;
 import xyz.erupt.core.service.EruptCoreService;
 import xyz.erupt.core.view.EruptApiModel;
 import xyz.erupt.core.view.EruptFieldModel;
 import xyz.erupt.core.view.EruptModel;
+import xyz.erupt.linq.lambda.LambdaSee;
 
 import java.lang.reflect.Field;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.*;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -48,7 +51,7 @@ import java.util.stream.Stream;
 @Slf4j
 public class EruptUtil {
 
-    //将object中erupt标识的字段抽取出来放到map中
+    // Extract the field marked as "erupt" from the "object" and place it into the "map".
     @SneakyThrows
     public static Map<String, Object> generateEruptDataMap(EruptModel eruptModel, Object obj) {
         Map<String, Object> map = new HashMap<>();
@@ -148,11 +151,11 @@ public class EruptUtil {
     public static List<VLModel> getChoiceList(EruptModel eruptModel, Edit edit) {
         List<VLModel> vls = new ArrayList<>();
         if (edit.type() == EditType.CHOICE) {
-            vls.addAll(Stream.of(edit.choiceType().vl()).map(vl -> new VLModel(vl.value(), vl.label(), vl.desc(), vl.disable())).collect(Collectors.toList()));
+            vls.addAll(Stream.of(edit.choiceType().vl()).map(vl -> new VLModel(vl.value(), vl.label(), vl.desc(), vl.disable())).toList());
             Stream.of(edit.choiceType().fetchHandler()).filter(clazz -> !clazz.isInterface()).forEach(clazz ->
                     Optional.ofNullable(EruptSpringUtil.getBean(clazz).fetch(edit.choiceType().fetchHandlerParams())).ifPresent(vls::addAll));
         } else if (edit.type() == EditType.MULTI_CHOICE) {
-            vls.addAll(Stream.of(edit.multiChoiceType().vl()).map(vl -> new VLModel(vl.value(), vl.label(), vl.desc(), vl.disable())).collect(Collectors.toList()));
+            vls.addAll(Stream.of(edit.multiChoiceType().vl()).map(vl -> new VLModel(vl.value(), vl.label(), vl.desc(), vl.disable())).toList());
             Stream.of(edit.multiChoiceType().fetchHandler()).filter(clazz -> !clazz.isInterface()).forEach(clazz ->
                     Optional.ofNullable(EruptSpringUtil.getBean(clazz).fetch(edit.multiChoiceType().fetchHandlerParams())).ifPresent(vls::addAll));
         }
@@ -165,11 +168,11 @@ public class EruptUtil {
     public static List<VLModel> getChoiceListFilter(EruptModel eruptModel, Edit edit, Map<String, Object> formData) {
         List<VLModel> vls = new ArrayList<>();
         if (edit.type() == EditType.CHOICE) {
-            vls.addAll(Stream.of(edit.choiceType().vl()).map(vl -> new VLModel(vl.value(), vl.label(), vl.desc(), vl.disable())).collect(Collectors.toList()));
+            vls.addAll(Stream.of(edit.choiceType().vl()).map(vl -> new VLModel(vl.value(), vl.label(), vl.desc(), vl.disable())).toList());
             Stream.of(edit.choiceType().fetchHandler()).filter(clazz -> !clazz.isInterface()).forEach(clazz ->
                     Optional.ofNullable(EruptSpringUtil.getBean(clazz).fetchFilter(formData, edit.choiceType().fetchHandlerParams())).ifPresent(vls::addAll));
         } else if (edit.type() == EditType.MULTI_CHOICE) {
-            vls.addAll(Stream.of(edit.multiChoiceType().vl()).map(vl -> new VLModel(vl.value(), vl.label(), vl.desc(), vl.disable())).collect(Collectors.toList()));
+            vls.addAll(Stream.of(edit.multiChoiceType().vl()).map(vl -> new VLModel(vl.value(), vl.label(), vl.desc(), vl.disable())).toList());
             Stream.of(edit.multiChoiceType().fetchHandler()).filter(clazz -> !clazz.isInterface()).forEach(clazz ->
                     Optional.ofNullable(EruptSpringUtil.getBean(clazz).fetchFilter(formData, edit.multiChoiceType().fetchHandlerParams())).ifPresent(vls::addAll));
         }
@@ -220,7 +223,7 @@ public class EruptUtil {
         }
     }
 
-    //生成一个合法的searchCondition
+    // Generate a valid searchCondition
     public static List<Condition> geneEruptSearchCondition(EruptModel eruptModel, List<Condition> searchCondition) {
         checkEruptSearchNotnull(eruptModel, searchCondition);
         List<Condition> legalConditions = new ArrayList<>();
@@ -265,7 +268,7 @@ public class EruptUtil {
                     throw new EruptApiErrorTip(EruptApiModel.Status.INFO, edit.title() + " " + I18nTranslate.$translate("erupt.notnull"), EruptApiModel.PromptWay.MESSAGE);
                 }
                 if (condition.getValue() instanceof List) {
-                    if (((List<?>) condition.getValue()).size() == 0) {
+                    if (((List<?>) condition.getValue()).isEmpty()) {
                         throw new EruptApiErrorTip(EruptApiModel.Status.INFO + edit.title() + " " + I18nTranslate.$translate("erupt.notnull"), EruptApiModel.PromptWay.MESSAGE);
                     }
                 }
@@ -277,16 +280,16 @@ public class EruptUtil {
         for (EruptFieldModel field : eruptModel.getEruptFieldModels()) {
             Edit edit = field.getEruptField().edit();
             JsonElement value = jsonObject.get(field.getFieldName());
-            if (field.getEruptField().edit().notNull()) {
+            if (edit.notNull()) {
                 if (null == value || value.isJsonNull()) {
-                    return EruptApiModel.errorNoInterceptMessage(field.getEruptField().edit().title() + " " + I18nTranslate.$translate("erupt.notnull"));
+                    return EruptApiModel.errorMessageApi(edit.title() + " " + I18nTranslate.$translate("erupt.notnull"));
                 } else if (String.class.getSimpleName().equals(field.getFieldReturnName())) {
                     if (StringUtils.isBlank(value.getAsString())) {
-                        return EruptApiModel.errorNoInterceptMessage(field.getEruptField().edit().title() + " " + I18nTranslate.$translate("erupt.notnull"));
+                        return EruptApiModel.errorMessageApi(edit.title() + " " + I18nTranslate.$translate("erupt.notnull"));
                     }
                 }
             }
-            if (field.getEruptField().edit().type() == EditType.COMBINE) {
+            if (edit.type() == EditType.COMBINE) {
                 JsonObject combine = jsonObject.getAsJsonObject(field.getFieldName());
                 if (null != combine) {
                     EruptApiModel eam = validateEruptValue(EruptCoreService.getErupt(field.getFieldReturnName()), combine);
@@ -295,19 +298,29 @@ public class EruptUtil {
                     }
                 }
             }
-            if (null != value && !AnnotationConst.EMPTY_STR.equals(edit.title())) {
-                //xss 注入处理
-                if (edit.type() == EditType.TEXTAREA || edit.type() == EditType.INPUT) {
-                    if (SecurityUtil.xssInspect(value.getAsString())) {
-                        return EruptApiModel.errorNoInterceptApi(field.getEruptField().edit().title() + " " + I18nTranslate.$translate("erupt.attack.xss"));
+            if (!AnnotationConst.EMPTY_STR.equals(edit.dynamic().condition())) {
+                if (null == value || value.isJsonNull()) {
+                    boolean dynamic = ScriptUtil.eval("!!(" + edit.dynamic().condition() + ")",
+                            Map.of(LambdaSee.field(Dynamic.Var::getValue), jsonObject.get(edit.dynamic().dependField()).getAsString()), boolean.class);
+                    Dynamic.Ctrl strategy = dynamic ? edit.dynamic().match() : edit.dynamic().noMatch();
+                    if (strategy == Dynamic.Ctrl.NOTNULL) {
+                        return EruptApiModel.errorMessageApi(edit.title() + " " + I18nTranslate.$translate("erupt.notnull"));
                     }
                 }
-                //数据类型校验
+            }
+            if (null != value && !value.isJsonNull() && !AnnotationConst.EMPTY_STR.equals(edit.title())) {
+                // XSS Injection Handling
+                if (edit.type() == EditType.TEXTAREA || edit.type() == EditType.INPUT) {
+                    if (SecurityUtil.xssInspect(value.getAsString())) {
+                        return EruptApiModel.errorApi(edit.title() + " " + I18nTranslate.$translate("erupt.attack.xss"));
+                    }
+                }
+                // Data type validation
                 switch (edit.type()) {
                     case NUMBER:
                     case SLIDER:
-                        if (!NumberUtils.isCreatable(value.getAsString())) {
-                            return EruptApiModel.errorNoInterceptMessage(field.getEruptField().edit().title() + " " + I18nTranslate.$translate("erupt.must.number"));
+                        if (!NumberUtils.isNumber(value.getAsString())) {
+                            return EruptApiModel.errorMessageApi(edit.title() + " " + I18nTranslate.$translate("erupt.must.number"));
                         }
                         break;
                     case INPUT:
@@ -315,7 +328,7 @@ public class EruptUtil {
                             String content = value.getAsString();
                             if (StringUtils.isNotBlank(content)) {
                                 if (!Pattern.matches(edit.inputType().regex(), content)) {
-                                    return EruptApiModel.errorNoInterceptMessage(field.getEruptField().edit().title() + " " + I18nTranslate.$translate("erupt.incorrect_format"));
+                                    return EruptApiModel.errorMessageApi(edit.title() + " " + I18nTranslate.$translate("erupt.incorrect_format"));
                                 }
                             }
                         }
@@ -323,11 +336,16 @@ public class EruptUtil {
                 }
             }
         }
+        try {
+            DataProxyInvoke.invoke(eruptModel, (dataProxy -> dataProxy.validate(GsonFactory.getGson().fromJson(jsonObject.toString(), eruptModel.getClazz()))));
+        } catch (EruptException e) {
+            return EruptApiModel.errorMessageApi(e.getMessage());
+        }
         return EruptApiModel.successApi();
     }
 
     /**
-     * 前端数据处理逻辑
+     * Front-end data processing logic
      */
     public static void processEruptWebValue(EruptModel eruptModel, JsonObject jsonObject) {
         for (EruptFieldModel field : eruptModel.getEruptFieldModels()) {
@@ -353,7 +371,6 @@ public class EruptUtil {
                         }
                     }
                 }
-                //TODO 密码组件值加密传输后解密
             }
         }
     }
@@ -363,7 +380,7 @@ public class EruptUtil {
         return TypeUtil.typeStrConvertObject(id, primaryField.getType());
     }
 
-    //将对象A的非空数据源覆盖到对象B中
+    // Copy the non-empty data source of object A to object B
     public static Object dataTarget(EruptModel eruptModel, Object data, Object target, SceneEnum sceneEnum) {
         for (EruptFieldModel fieldModel : eruptModel.getEruptFieldModels()) {
             EruptField eruptField = fieldModel.getEruptField();
@@ -396,7 +413,7 @@ public class EruptUtil {
         return target;
     }
 
-    //清理序列化后对象所产生的默认值（通过json串进行校验）
+    // Clear the default values generated by serialized objects (verified through JSON strings)
     public static void clearObjectDefaultValueByJson(Object obj, JsonObject data) {
         ReflectUtil.findClassAllFields(obj.getClass(), field -> {
             try {
@@ -413,16 +430,17 @@ public class EruptUtil {
     }
 
     /**
-     * 将JSON串转换为erupt实体对象
+     * Convert the JSON string to an erupt entity object
      *
-     * @param json      json对象
-     * @param extraData 额外填充的反射数据
+     * @param json      JSON object
+     * @param extraData Additional supplementary reflection data
      */
+    @SneakyThrows
     public static Object jsonToEruptEntity(EruptModel eruptModel, JsonObject json, Map<String, Object> extraData) throws InstantiationException, IllegalAccessException {
         Gson gson = GsonFactory.getGson();
         Object o = gson.fromJson(json.toString(), eruptModel.getClazz());
         EruptUtil.clearObjectDefaultValueByJson(o, json);
-        Object obj = EruptUtil.dataTarget(eruptModel, o, eruptModel.getClazz().newInstance(), SceneEnum.ADD);
+        Object obj = EruptUtil.dataTarget(eruptModel, o, eruptModel.getClazz().getDeclaredConstructor().newInstance(), SceneEnum.ADD);
         if (null != extraData) {
             for (String key : extraData.keySet()) {
                 Field field = ReflectUtil.findClassField(eruptModel.getClazz(), key);
@@ -434,7 +452,7 @@ public class EruptUtil {
     }
 
     /**
-     * 获取附件上传代理器
+     * Obtain the attachment upload proxy.
      *
      * @return AttachmentProxy
      */
@@ -443,7 +461,7 @@ public class EruptUtil {
         return null == eruptAttachmentUpload ? null : EruptSpringUtil.getBean(eruptAttachmentUpload.value());
     }
 
-    //是否为时间字段
+    // Is it a time field?
     public static boolean isDateField(String fieldType) {
         if (Date.class.getSimpleName().equals(fieldType)) {
             return true;
