@@ -1,10 +1,11 @@
 package xyz.erupt.excel.util;
 
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.poi.ss.usermodel.*;
+import org.springframework.http.HttpHeaders;
 
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.nio.charset.StandardCharsets;
@@ -28,14 +29,12 @@ public class ExcelUtil {
         return style;
     }
 
-    private static final String CONTENT_DISPOSITION_HEADER = "Content-Disposition";
-
     public static OutputStream downLoadFile(HttpServletRequest request, HttpServletResponse response, String fileName) {
         try {
-            String headStr = "attachment; filename=" + java.net.URLEncoder.encode(fileName, StandardCharsets.UTF_8.name());
+            String headStr = "attachment; filename=" + java.net.URLEncoder.encode(fileName, StandardCharsets.UTF_8);
             response.setContentType("application/x-download");
-            response.setHeader(CONTENT_DISPOSITION_HEADER, headStr);
-            response.addHeader("Access-Control-Expose-Headers", CONTENT_DISPOSITION_HEADER);
+            response.setHeader(HttpHeaders.CONTENT_DISPOSITION, headStr);
+            response.addHeader("Access-Control-Expose-Headers", HttpHeaders.CONTENT_DISPOSITION);
             response.setCharacterEncoding(StandardCharsets.UTF_8.name());
             return response.getOutputStream();
         } catch (IOException e) {
